overflow-x issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@ body {
   font-family: "Roboto Slab", serif;
   color: #f1f1f1;
 }
+#root {
+  overflow-x: hidden;
+}
 
 .cover {
   position: relative;
